--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
 
     <!-- Selected amount key -->
     <string name="pref_amount_key">amount_key</string>
+    <string name="pref_selected_table_key">selected_table</string>
 </resources>
