--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,11 @@
     <!-- Correction's key -->
     <string name="pref_corrections_key">corrections_key</string>
     <string name="pref_corrections_initialized_key">correction_initialized_key</string>
+    <string name="pref_is_corrections">isCorrections</string>
+    <string name="isCorrections">isCorrections</string>
 
     <!-- Selected amount key -->
     <string name="pref_amount_key">amount_key</string>
     <string name="pref_selected_table_key">selected_table</string>
+
 </resources>
