--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,10 @@
     <string name="remaining_questions">%1$d</string>
     <string name="preference_file_key">Score Preferences</string>
     <string name="preference_remaining_questions_key">Remaining Questions Preferences</string>
+    <string name="pref_recent_24_key">recent_24</string>
+    <string name="pref_recent_48_key">recent_48</string>
+    <string name="pref_recent_72_key">recent_72</string>
+
 
     <!-- Correction's key -->
     <string name="pref_corrections_key">corrections_key</string>
