--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="pref_recent_24_key" translatable="false">recent_24</string>
     <string name="pref_recent_48_key" translatable="false">recent_48</string>
     <string name="pref_recent_72_key" translatable="false">recent_72</string>
+    <string name="pref_is_practice" translatable="false">is_practice</string>
 
 
     <!-- Correction's key -->
