--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,5 +81,6 @@
     <string name="_4_secs_question">4 secs/question</string>
     <string name="_3_secs_question">3 secs/question</string>
     <string name="paused">Paused</string>
+    <string name="_36">36</string>
 
 </resources>
