--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,9 +28,18 @@
     <string name="pref_selected_table_key" translatable="false">selected_table</string>
     <string name="pref_selected_assets_key" translatable="false">selected_asset</string>
 
+    <!--User grade Analytics-->
     <string name="user_property_key_school_grade" translatable="false">user_school_grade</string>
 
     <string name="letsplay_json" translatable="false">letsplay.json</string>
+    <string name="letsplay" translatable="false">letsplay</string>
+    <string translatable="false" name="first_table_amount">24</string>
+    <string translatable="false" name="second_table_amount">36</string>
+    <string translatable="false" name="third_table_amount">48</string>
+    <string name="_widget24" translatable="false">/24</string>
+    <string name="_widget48" translatable="false">/48</string>
+    <string name="_widget72" translatable="false">/72</string>
+
     <string name="go_home_alert">Go Home?</string>
     <string name="back_press_alert_message">Current results will reset.</string>
     <string name="go_home_option">Go home</string>
@@ -54,7 +63,6 @@
     <string name="delete_dialog_pos_erase_button">Erase</string>
     <string name="school_grade_dialog_title">School Grade</string>
     <string name="school_grade_dialog_pos">Save</string>
-    <string name="letsplay" translatable="false">letsplay</string>
     <string name="result100">Perfect!</string>
     <string name="result90">Awesome Job!</string>
     <string name="result70">Good Job!</string>
@@ -66,14 +74,11 @@
     <string name="home_button">Home</string>
     <string name="replay_button">Replay</string>
     <string name="_24">24</string>
-    <string name="_48">48</string>
-    <string name="_72">72</string>
+    <string name="_48">36</string>
+    <string name="_72">48</string>
     <string name="select_amount_of_questions">Select amount of questions!</string>
     <string name="play_icon">Play icon</string>
     <string name="lets_play">Lets Play!</string>
-    <string name="_widget24" translatable="false">/24</string>
-    <string name="_widget48" translatable="false">/48</string>
-    <string name="_widget72" translatable="false">/72</string>
     <string name="recent_play_results">Recent Play Results</string>
     <string name="profile">Profile</string>
     <string name="empty_graph_text">Play this mode three times to view history.</string>
